Renamed thesis in plantRow an correct sectorName
