# backend/application/persistency/model/MatrixField.js
@@ -24,11 +24,11 @@ function initMatrixField(sequelize) {
         type: DataTypes.STRING,
         allowNull: false
       },
-      sectorname: {
+    sectorName: {
         type: DataTypes.STRING,
         allowNull: false
       },
-      thesis: {
+    plantRow: {
         type: DataTypes.STRING,
         allowNull: false
       },
