# backend/application/persistency/model/TranscodingField.js
@@ -13,14 +13,14 @@ function initTranscodingField(sequelize) {
         companyName: DataTypes.TEXT,
         fieldName: DataTypes.TEXT,
         coltureType: DataTypes.TEXT,
-        sectorname: DataTypes.TEXT,
+        sectorName: DataTypes.TEXT,
         wateringcapacity: DataTypes.DOUBLE,
         initialwatering: DataTypes.DOUBLE,
         maximumwatering: DataTypes.DOUBLE,
         advicetime: DataTypes.DOUBLE,
         wateringtype: DataTypes.TEXT,
         adviceweight: DataTypes.DOUBLE,
-        thesisname: DataTypes.TEXT,
+        plantRowname: DataTypes.TEXT,
         sensorNumber: DataTypes.TEXT,
         sensorid: DataTypes.TEXT,
         sensorname: DataTypes.TEXT,
