# backend/application/persistency/model/ViewDataOriginal.js
@@ -15,8 +15,8 @@ ViewDataOriginal.init({
     fieldName: DataTypes.TEXT,
     plantId: DataTypes.DOUBLE,
     plantName: DataTypes.TEXT,
-    sectorname: DataTypes.DOUBLE,
-    thesis: DataTypes.TEXT,
+    sectorName: DataTypes.DOUBLE,
+    plantRow: DataTypes.TEXT,
     colture: DataTypes.TEXT,
     coltureType: DataTypes.TEXT,
     nodeId: DataTypes.TEXT,
